--- a/data/medecine.html
+++ b/data/medecine.html
@@ -6,7 +6,7 @@
  	<script type="text/javascript" src="js/main.js"></script>
  </head>
 
- <body id="bodi6">
+ <body id="bodi">
  
 	<div style="text-align: left;">
  	<a href="../index.html"><img id="image-home" src="image/home.png" alt="back"></a>
