--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  	<meta charset="utf-8">
  	<title>Prix Nobel</title>
  	<link rel="stylesheet" href="data/css/style.css"/>
+ 	<link rel="icon" type="image/png" href="data/image/infinity.png"/>
  </head>
 
  <body>
