--- a/data/littérature.html
+++ b/data/littérature.html
@@ -3,7 +3,7 @@
  	<meta charset="utf-8">
  	<title>Littérature</title>
  	<link rel="stylesheet" href="css/style-domaine.css"/>
- 	<link rel="icon" type="image/png" href="data/image/infinity.png"/>
+ 	<link rel="icon" type="image/png" href="image/infinity.png"/>
  	<script type="text/javascript" src="js/main.js"></script>
  </head>
 
